XWIKI-607: The property editor of the Class editor screen has layout issues
Fixed. The css specified that all chackbox and readio buttons should float.


git-svn-id: https://svn.xwiki.org/svnroot/xwiki/xwiki/trunk@1813 f329d543-caf0-0310-9063-dda96c69346f

--- a/web/standard/src/main/webapp/skins/xwiki10b1/colorsblack.css
+++ b/web/standard/src/main/webapp/skins/xwiki10b1/colorsblack.css
@@ -608,11 +608,7 @@ input:focus, textarea:focus {
   background-image: url("black-textareabg1.png");
 }
 
-label {
-  display: block;
-}
 form label {
-  display: block;
   padding: 0px;
 }
 
@@ -622,7 +618,7 @@ form input {
 }
 
 input[type=checkbox], input[type=radio]{
-  float: left;
+  /*float: left;*/
   margin-right: 0.75em;
 }
 
